Fix spacing bug CSS for edit order line

--- a/app/assets/stylesheets/api/order_lines.scss
+++ b/app/assets/stylesheets/api/order_lines.scss
@@ -15,11 +15,17 @@
 }
 
 .ol-form-container {
+    width: 100%;
     background-color: transparent;
     padding: 0;
+
     > h4 {
         text-align: center;
     }
+}
+
+.order-line-form {
+    width: 100%;
 }
 
 .labels {
@@ -35,10 +41,10 @@
 }
 
 .section-container {
-    width: 96rem;
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1.5fr;
-    grid-gap: 2rem;
+    grid-column-gap: 2rem;
     margin: 2rem 0;
 }
 
@@ -72,7 +78,7 @@
     }
 
     &__racket-section {
-        height: 48rem;
+        height: calc(100% - 21px);
     }
 
     &__strings-section {
